# dll-example

./: CMakeLists.txt
app/: app.c
bar/: CMakeLists.txt  bar.c  bar.h
foo/: CMakeLists.txt  foo.c  foo.h
